# smart-spotlight-search-mlx

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data-ingestion/: chat.py  imessages.py  imessages_every_1000.py  search.py
tests/: conftest.py  test_imessages.py  test_placeholder.py
